test/conformance/chainsaw/autogen/restrict-image-registries/check-autogen.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ($test.metadata.name)
status:
  autogen:
    rules:
    - match:
        any:
        - resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
      name: autogen-validate-registries
      skipBackgroundRequests: true
      validate:
        message: Images may only come from our internal enterprise registry.
        pattern:
          spec:
            template:
              spec:
                containers:
                - image: registry.domain.com/*
        failureAction: Enforce
    - match:
        any:
        - resources:
            kinds:
            - batch/v1/CronJob
      name: autogen-cronjob-validate-registries
      skipBackgroundRequests: true
      validate:
        message: Images may only come from our internal enterprise registry.
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    containers:
                    - image: registry.domain.com/*
        failureAction: Enforce
