test/conformance/chainsaw/autogen/restrict-image-registries/policy.yaml
apiVersion : kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ($test.metadata.name)
spec:
  rules:
  - name: validate-registries
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Enforce
      message: "Images may only come from our internal enterprise registry."
      pattern:
        spec:
          containers:
          - image: "registry.domain.com/*"
